Servicios: se hace peticion HTTP GET a API y se muestran los resultados

--- a/src/app/articulo-detalle/articulo-detalle.component.html
+++ b/src/app/articulo-detalle/articulo-detalle.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="articulo" >
-        <h4>{{articulo.nombre}}</h4>
-        <p>{{articulo.descripcion}}</p>
-        <p>{{articulo.fecha | date}}</p>
-        <p>{{articulo.usuario}}</p> 
+        <h4>{{articulo.title}}</h4>
+        <p>{{articulo.body}}</p>
+        <p>{{articulo.id}}</p>
+        <p>{{articulo.userId}}</p> 
     </div>
     
 </div>
