Servicios: consumir metodo post usando datos desde un formulario

--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/perfil" routerLinkActive="active" >perfil</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/agregar-articulo" routerLinkActive="active">agregar</a>
+        </li>
       </ul>
       <span class="navbar-text">
         Usuario: {{UsuarioInyectado.usuario.nombre}} {{UsuarioInyectado.usuario.apellido}}
