--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,6 @@
     <div class="articulo" *ngFor ="let listaArticulos of articulo" >
         <h4 (click)="irAlDetalle(listaArticulos)"> {{listaArticulos.title}}</h4>
         <p>{{listaArticulos.body}}</p>
+        <button class="btn btn-danger" (click)="borrar(listaArticulos.id)">Borrar</button>
     </div>
 </div>
