Servicios: Se actualiza un Articulo usando el metodo PUT

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,6 @@
         <h4 (click)="irAlDetalle(listaArticulos)"> {{listaArticulos.title}}</h4>
         <p>{{listaArticulos.body}}</p>
         <button class="btn btn-danger" (click)="borrar(listaArticulos.id)">Borrar</button>
+        <button class="btn btn-primary" (click)="actualizar(listaArticulos)">Actualizar</button>
     </div>
 </div>
