--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link" routerLink="/perfil" routerLinkActive="active" >perfil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/agregar-articulo" routerLinkActive="active">agregar</a>
+          <a class="nav-link" routerLink="/agregar-articulo/true" routerLinkActive="active">agregar</a>
         </li>
       </ul>
       <span class="navbar-text">
